--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -269,3 +269,242 @@ a{
     align-self: center;
 }
 
+/* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+  
+  @media (min-width: 320px) and (max-width: 480px) {
+    
+    .html{
+        height: 100%;
+        width: 100%;
+    }
+    .grid{
+        display:grid;
+        background-color: white;
+        gap : 0px;
+        height: 100%;
+        grid-template:
+        "head_wrapper head_wrapper" 0.5fr
+        "content content" 7fr
+        "footer footer" 0.5fr
+        ;
+    }
+    
+    .head_wrapper{
+        position: fixed;
+        top:0px;
+        width: 99%;
+        height: 20%;
+        grid-area: head_wrapper;
+        align-items: center;
+        margin-bottom: 5px;
+    }
+    .head_wrapper_content{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    
+        width: 100%;
+        background-color: white;
+    
+    
+    }
+    
+    .home{
+        
+        text-decoration: none;
+        
+        color: black;
+        
+        }
+        
+        
+    .home:hover{
+    
+    color: darksalmon;
+    
+    background-color: whitesmoke;
+    
+    }
+    
+    .name{
+        grid-area: name;
+        background-color: white;
+        font-family: 'Montserrat', sans-serif;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        text-decoration: none;
+    
+    }
+    #name_link:hover{
+        color: darksalmon;
+        background-color: whitesmoke;
+        
+    }
+    
+    
+    
+    
+    .nav{
+        grid-area: nav;
+        background-color: white;
+        font-family: 'Montserrat', sans-serif;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    
+    
+    }
+    #menu{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+    
+    
+    #menu ul li {
+        list-style: none;
+        color: bisque;
+        background-color: white;
+        float: left;
+        line-height: 15px;
+        vertical-align: middle;
+        text-align: center;
+    }
+    
+    #menu .menu_link {
+        text-decoration: cornflowerblue;
+        color:black;
+        display: flex;
+        width: 80px;
+        font-size: 12px;
+        justify-content: flex-end;
+        align-content: flex-end;
+    }
+    
+    #menu .menu_link:hover{
+        color: darksalmon;
+        background-color: whitesmoke;
+    }
+    
+    /*content start*/
+    
+    .content{
+        grid-area:content;
+        background: #faf7f7;
+        font-family: 'Montserrat', sans-serif; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;  
+        align-items: center;
+        padding-top: ; 
+    }
+    .content_aboutme_text{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;  
+        align-items: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 10px; /*vh do change depeding on screen size*/
+    
+    }
+    .content_picture{
+        border-radius: 100%;
+    }
+    
+    .content_picture_text{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    
+    .content_box_hello{
+        width: 190px;
+        height: 320px;
+    }
+    .content_box_image{
+        width: 190px;
+        height: 320px;
+        font-size: smaller;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .content_box_button_button{
+        width: 63px;
+        height: 15px;
+    }
+    .content_box_button_button > a{
+        text-align: center;
+        font-size: 7px;
+    }
+    /*footer start*/
+    .footer{
+        padding-top: 3px;
+        display: grid;
+        font-size: 5px;
+        grid-area:footer;
+        background-color: white;
+        font-family: 'Montserrat', sans-serif; 
+        grid-template: 
+        "copy_right contact"
+    }
+    .copy_right{
+        grid-area:copy_right;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        font-family: 'Montserrat', sans-serif; 
+    }
+    
+    
+    .contact{
+        grid-area:contact;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: flex-start;
+    
+        
+    }
+    
+    .phone{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 110px;
+    }
+    #call{
+        align-self: center;
+    }
+    
+    .mail{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 110px;
+    }
+    
+    #write{
+        align-self: center;
+    }
+    
+    .sns{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 110px;
+    }
+    #follow{
+        align-self:center;
+    }
+    .sns_image{
+        align-self: center;
+    }
+    
+  }
